New changes to list boxes and descriptions

--- a/index.html
+++ b/index.html
@@ -9,16 +9,7 @@
         <link rel="stylesheet" type="text/css"  href="resources/css/smart-forms.css">
         <link rel="stylesheet" type="text/css"  href="resources/css/font-awesome.min.css">
 
-		<script type="text/javascript">
-			/* =============================
-			This script generates sample text for the body content. 
-			You can remove this script and any reference to it. 
-			 ============================= */
-			/*var bodyText=["The smaller your reality, the more convinced you are that you know everything.", "If the facts don't fit the theory, change the facts.", "The past has no power over the present moment.", "This, too, will pass.", "</p><p>You will not be punished for your anger, you will be punished by your anger.", "Peace comes from within. Do not seek it without.", "<h2>Heading</h2><p>The most important moment of your life is now. The most important person in your life is the one you are with now, and the most important activity in your life is the one you are involved with now."]
-			function generateText(sentenceCount){
-				for (var i=0; i<sentenceCount; i++)
-				document.write(bodyText[Math.floor(Math.random()*7)]+" ")
-			}*/
+		<script type="text/javascript">		
 		</script>
 	</head>
 	<body>
@@ -56,7 +47,9 @@
 								<li><a href="Rest1.html">Geo Search</a></li>
 								<li><a href="Rest2.html">Sentimental Analysis</a></li>		
 								<li><a href="Rest3.html">&nbsp;Top List</a></li>
-								<li><a href="Rest4.html">&nbsp;Sentiment totals by term</a></li>					
+								<li><a href="Rest4.html">&nbsp;Sentiment totals by term</a></li>
+                                <li><a href="Rest5.html">&nbsp;Top list trending by city</a></li>				
+
 							</ul>
 						</div>
 					</nav>
