--- a/Rest5.html
+++ b/Rest5.html
@@ -227,7 +227,7 @@
 							<h3>Options</h3>
 							<ul>
 								<li><a href="Rest1.html">&nbsp;Geo Search</a></li>
-								<li><a href="Rest2.html">Sentiment Analysis</a></li>
+								<li><a href="SentimentAnalyser.html">Sentiment Analysis</a></li>
                                 <li><a href="Rest3.html">&nbsp;Top List</a></li>
                                 <li><a href="Rest4.html">&nbsp;Sentiment totals by term</a></li>
                                 <li><img src="resources/images/tick.png" alt="Selected" style="width:15px;height:15px"><a href="Rest5.html">&nbsp;Top list trending by city</a></li>
