--- a/SentimentAnalyser.html
+++ b/SentimentAnalyser.html
@@ -19,7 +19,7 @@
                 div.scroll {
                     background-color: #F5ECCE;
                     width: 100%;
-                    height: 1000px;
+                    height: 150px;
                     overflow: scroll;
                     border: 1px solid #aaa;
                     padding: 0.5em 1.5em;
@@ -64,7 +64,7 @@
                 var color;
                 if(topic == "positive"){
                     //blue
-                    color="#A9BCF5";
+                    color="#00acd6";
                 }else if(topic == "negative"){
                     //red
                     color="#F5A9A9"
@@ -134,7 +134,7 @@
                                                     <div class="section">
                                                         <label>Enter a sentiment to evaluate:</label>
                                                         <label class="field prepend-icon">
-                                                            <textarea class="gui-textarea" id="idTopic" name="idTopic" placeholder="E. g. Tony Abott" required></textarea>
+                                                            <textarea class="gui-textarea" id="idTopic" name="idTopic" placeholder="E. g. Brace yourself, winter is coming :)" required></textarea>
                                                         </label>
                                                     </div>
 
@@ -171,7 +171,8 @@
 							<h3>Options</h3>
 							<ul>
 								<li><a href="Rest1.html">&nbsp;Geo Search</a></li>
-								<li><img src="resources/images/tick.png" alt="Selected" style="width:15px;height:15px"><a href="Rest2.html">&nbsp;Sentiment Analysis</a></li>	
+								<li><img src="resources/images/tick.png" alt="Selected" style="width:15px;height:15px">
+                                    <a href="SentimentAnalyser.html">&nbsp;Sentiment Analysis</a></li>	
                                 <li><a href="Rest3.html">&nbsp;Top List</a></li>
                                 <li><a href="Rest4.html">&nbsp;Sentiment totals by term</a></li>
                                 <li><a href="Rest5.html">&nbsp;Top list trending by city</a></li>                                               
