--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<h3>Options</h3>
 							<ul>
 								<li><a href="Rest1.html">Geo Search</a></li>
-								<li><a href="Rest2.html">Sentimental Analysis</a></li>		
+								<li><a href="SentimentAnalyser.html">Sentimental Analysis</a></li>		
 								<li><a href="Rest3.html">&nbsp;Top List</a></li>
 								<li><a href="Rest4.html">&nbsp;Sentiment totals by term</a></li>
                                 <li><a href="Rest5.html">&nbsp;Top list trending by city</a></li>				
