--- a/Rest1.html
+++ b/Rest1.html
@@ -193,7 +193,7 @@
                                                         <div class="section">
                                                             <label>Topic:</label>
                                                             <label class="field">
-                                                                <input type="text" name="idTopic" id="idTopic" class="gui-input" placeholder="E.g. Tony Abott" required>
+                                                                <input type="text" name="idTopic" id="idTopic" class="gui-input" placeholder="E.g. Tony Abbott" required>
                                                             </label>
                                                         </div><!-- end section -->                                                                                 
                                                     
@@ -318,7 +318,7 @@
 							<h3>Options</h3>
 							<ul>
 								<li><img src="resources/images/tick.png" alt="Selected" style="width:15px;height:15px"><a href="Rest1.html">&nbsp;Geo Search</a></li>
-								<li><a href="Rest2.html">Sentiment Analysis</a></li>	
+								<li><a href="SentimentAnalyser.html">Sentiment Analysis</a></li>
                                 <li><a href="Rest3.html">&nbsp;Top List</a></li>	                                
                                 <li><a href="Rest4.html">&nbsp;Sentiment totals by term</a></li>
                                 <li><a href="Rest5.html">&nbsp;Top list trending by city</a></li>				
